add route /user to swagger.
