# routes/api.php
@@ -2,12 +2,16 @@
 
 use App\Http\Controllers\Auth\AuthenticatedSessionController;
 use App\Http\Controllers\Auth\RegisteredUserController;
+use App\Http\Controllers\UserController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
-Route::middleware(['auth:sanctum'])->get('/user', function (Request $request) {
-    return $request->user();
-});
+//Route::middleware(['auth:sanctum'])->get('/user', function (Request $request) {
+//    return $request->user();
+//});
+
+Route::get('/user', [UserController::class, 'getCurrentUser'])
+    ->middleware('auth:sanctum');
 
 Route::post('/register', [RegisteredUserController::class, 'store'])
     ->middleware('guest')
